--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # RUn Bash Tests
+      # Run Bash Tests
       - name: Run Tests
         run: make build ldap-test
         shell: bash
