--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Run Bash Tests
       - name: Run Tests
-        run: make build ldap-test
+        run: make build test
         shell: bash
 
       # Install the cosign tool except on PR
